test/error/foreach_error.result
Error: cannot pass literal as reference
  --> test/error/foreach_error.colgm:39:31
   | 
39 |     foreach (var i; a.reindex(0)) {}
   |                               ^

Error: cannot pass literal as reference
  --> test/error/foreach_error.colgm:40:32
   | 
40 |     forindex (var i; a.reindex(0)) {}
   |                                ^

Error: container must be struct type
  --> test/error/foreach_error.colgm:43:21
   | 
43 |     foreach (var i; b) {}
   |                     ^

Error: container must be struct type
  --> test/error/foreach_error.colgm:44:22
   | 
44 |     forindex (var i; b) {}
   |                      ^

Error: cannot use "." to get field from pointer "A*".
  --> test/error/foreach_error.colgm:47:22
   | 
47 |     foreach (var i; c.reindex(0)) {}
   |                      ^
  note: maybe you mean "->"?

Error: cannot use "." to get field from pointer "A*".
  --> test/error/foreach_error.colgm:48:23
   | 
48 |     forindex (var i; c.reindex(0)) {}
   |                       ^
  note: maybe you mean "->"?